--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,16 @@
 	    <artifactId>mail</artifactId>
 	    <version>1.4</version>
 	</dependency>
-	    
+	<dependency>
+	    <groupId>com.github.CrystalTechSAS</groupId>
+	    <artifactId>jCrystalDates</artifactId>
+	    <version>master-SNAPSHOT</version>
+	</dependency>
   </dependencies>
+  <repositories>
+		<repository>
+		    <id>jitpack.io</id>
+		    <url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 </project>
